--- a/entity-module/list.html.twig
+++ b/entity-module/list.html.twig
@@ -9,11 +9,6 @@
     </template>
     <template #smart-bar-header>
         <h2>
-            {{ $tc('sw-settings.index.title') }}
-            <sw-icon
-                    name="regular-chevron-right-xs"
-                    small
-            />
             {{ $tc(config.moduleName + '.title') }}
 
             <span
@@ -32,6 +27,7 @@
                 showOnDisabledElements: true
             }"
             variant="primary"
+            size="default"
             :disabled="!acl.can(config.entity + '.creator') || undefined"
             @click="$router.push({ name: config.baseRouteName + '.create' })"
         >
@@ -55,7 +51,7 @@
             :detailRoute="config.baseRouteName + '.detail'"
         >
         <template #detail-action="{ item }">
-            <sw-context-menu-item 
+            <sw-context-menu-item
                 class="sw-entity-listing__context-menu-show-action"
                 :routerLink="{ name: config.baseRouteName + '.detail', params: { id: item.id } }">
                 {{ $tc(config.moduleName + '.list.open') }}
